# data-competition-template

./: README.md  pyproject.toml
src/data_competition_template/: __init__.py
