[project]
name = "data-competition-template"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "yoshiki301", email = "yoshiki301@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.0.280",
    "black>=23.7.0",
    "mypy>=1.4.1",
    "pytest>=7.4.0",
]

[tool.hatch.metadata]
allow-direct-references = true
